# DistributedMonarch

configurations/frontera/: tf_placement_100g_disk.yaml
pastor/: CMakeLists.txt
pastor/src/control_plane/: msgServiceImpl.cpp
pastor/src/data_plane/interfaces/transparent/: tmonarch.h
pastor/src/data_plane/logic/handlers/placement_handlers/: placement_handler.cpp
pastor/src/data_plane/logic/metadata/: metadata_container_service.cpp  metadata_container_service.h
pastor/src/data_plane/logic/prefetching/: prefetch_data_plane.cpp
pastor/src/data_plane/logic/root/: client.cpp  hierarchical_data_plane.cpp  hierarchical_data_plane.cpp.save  hierarchical_data_plane.cpp.save.1  hierarchical_data_plane.cpp.save.2  hierarchical_data_plane.h  ip_finder.py  server.cpp  server.h  server.hpp
pastor/src/data_plane/logic/root/storage_drivers/: data_storage_driver.cpp  data_storage_driver.h  file_system_driver.cpp  file_system_driver.h  ph_memory_buffer_driver.cpp
pastor/src/helpers/: logger.h
tensorflow/configurations/frontera/: tf_passthrough.yaml  tf_placement_100g_disk.yaml
tensorflow/pastor/: CMakeLists.txt
tensorflow/pastor/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
tensorflow/pastor/grpc_out/: info_exchange_service.grpc.pb.cc  info_exchange_service.grpc.pb.h  info_exchange_service.pb.cc  info_exchange_service.pb.h
tensorflow/pastor/protos/: info_exchange_service.proto
tensorflow/pastor/src/data_plane/logic/handlers/placement_handlers/: placement_handler.cpp
tensorflow/pastor/src/data_plane/logic/root/: client.cpp  hierarchical_data_plane.cpp  hierarchical_data_plane.h  server.cpp
tensorflow/pastor/src/helpers/: logger.h
